<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
        >

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mTvMessage"
            android:text="@string/hello_world"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="#000000"
            />
</LinearLayout>